@@ -1,4 +1,4 @@
-/*	$NetBSD: time.c,v 1.1.1.3.4.1.2.1 2011/01/23 21:52:23 bouyer Exp $	*/
+/*	$NetBSD: time.c,v 1.1.1.3.4.1.2.2 2011/11/20 13:02:16 bouyer Exp $	*/
 
 /*
  * Copyright (C) 2004, 2005, 2008  Internet Systems Consortium, Inc. ("ISC")
@@ -373,7 +373,7 @@ isc_time_secondsastimet(const isc_time_t *t, time_t *secondsp) {
 	    (time_t)0.5 != 0.5 &&	       /* Not a floating point type. */
 	    (i = (time_t)-1) != 4294967295u &&		       /* Is signed. */
 	    (seconds &
-	     (1U << (sizeof(time_t) * CHAR_BIT - 1))) != 0U) {   /* Negative. */
+	     (1ULL << (sizeof(time_t) * CHAR_BIT - 1))) != 0ULL) {   /* Negative. */
 		/*
 		 * This UNUSED() is here to shut up the IRIX compiler:
 		 *	variable "i" was set but never used
